--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
-    "element-ui": "^1.2.2"
+    "element-ui": "^1.2.2",
+    "vue-simplemde": "^0.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
