--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "element-ui": "^1.2.2",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
-    "element-ui": "^1.2.2",
     "vue-simplemde": "^0.3.2"
   },
   "devDependencies": {
