--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "element-ui": "^1.2.9",
+    "element-ui": "^1.2.3",
+    "marked": "^0.3.6",
+    "mavon-editor": "^1.6.2",
     "vue": "^2.2.2",
-    "vue-router": "^2.2.0",
-    "vue-simplemde": "^0.3.2"
+    "vue-router": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -65,11 +66,13 @@
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
+    "node-sass": "^4.5.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.5",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "sinon": "^1.17.7",
